Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -720,10 +720,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "first_class_df = df[df.Pclass=='1']\n",
+    "second_third_class_df = df[df.Pclass!='1']"
+   ]
   },
   {
    "cell_type": "markdown",
