Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -799,7 +799,14 @@
    "source": [
     "query_string = None\n",
     "high_passenger_number_df = None\n",
-    "# high_passenger_number_df.head()"
+    "# high_passenger_number_df.head()\n",
+    "\n",
+    "\n",
+    "\n",
+    "query_string = 'PassengerId >= 500'\n",
+    "print(query_string)\n",
+    "high_passenger_number_df = df.query(query_string)\n",
+    "high_passenger_number_df.head()"
    ]
   },
   {
