Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -969,8 +969,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "female_children_df = None\n",
-    "# female_children_df.head()"
+    "female_children_df = df.query(\"Sex == 'female' or Age <= 15\")\n",
+    "female_children_df.head()"
    ]
   },
   {
