--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,10 +1363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pandasql import sqldf"
+   ]
   },
   {
    "cell_type": "markdown",
