--- a/index.ipynb
+++ b/index.ipynb
@@ -1383,11 +1383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pysqldf = None"
+    "pysqldf = lambda q: sqldf(q, globals())"
    ]
   },
   {
