Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1416,6 +1416,12 @@
     "q = None\n",
     "\n",
     "passenger_names = None\n",
+    "passenger_names\n",
+    "\n",
+    "\n",
+    "q = \"SELECT Name from df LIMIT 10\"\n",
+    "\n",
+    "passenger_names = pysqldf(q)\n",
     "passenger_names"
    ]
   },
