Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1409,19 +1409,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Moran, Mr. James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>McCarthy, Mr. Timothy J</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Palsson, Master. Gosta Leonard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Name\n",
+       "0                            Braund, Mr. Owen Harris\n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...\n",
+       "2                             Heikkinen, Miss. Laina\n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)\n",
+       "4                           Allen, Mr. William Henry\n",
+       "5                                   Moran, Mr. James\n",
+       "6                            McCarthy, Mr. Timothy J\n",
+       "7                     Palsson, Master. Gosta Leonard\n",
+       "8  Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)\n",
+       "9                Nasser, Mrs. Nicholas (Adele Achem)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "q = None\n",
-    "\n",
-    "passenger_names = None\n",
-    "passenger_names\n",
     "\n",
     "\n",
-    "q = \"SELECT Name from df LIMIT 10\"\n",
     "\n",
-    "passenger_names = pysqldf(q)\n",
+    "#q = \"SELECT Name from df LIMIT 10\"\n",
+    "\n",
+    "passenger_names = pysqldf(\"SELECT Name from df LIMIT 10\")\n",
     "passenger_names"
    ]
   },
