Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1557,7 +1557,7 @@
     "q3 = None\n",
     "q4 = None\n",
     "\n",
-    "survived_females_by_pclass_df = None\n",
+    "survived_females_by_pclass_df = pysqldf\n",
     "died_females_by_pclass_df = None\n",
     "\n",
     "# Create and label the histograms for each below!"
